--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "circular-json": "^0.5.9",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "next": "latest",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
+    "@types/circular-json": "^0.4.0",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "latest",
     "@types/react": "latest",
